# food_serving_robot

./: CMakeLists.txt  README.md  food_serving_robot.rviz  package.xml
cad_model/: MirrorMirrorgripper_finger.SLDPRT  Mirrorgripper_assembly.SLDASM  Mirrorgripper_finger.SLDPRT  Mirrorgripper_palm.SLDPRT  chassis.SLDPRT  chassis2.SLDPRT  gripper_assembly.SLDASM  gripper_finger.SLDPRT  gripper_palm.SLDPRT  pizza_tray.SLDPRT
cad_model/ur10/UR10/: Base.SLDPRT  Bracket.SLDPRT  Link1.SLDPRT  Link2.SLDPRT  MirrorBase.SLDPRT  MirrorBracket.SLDPRT  MirrorLink1.SLDPRT  MirrorLink2.SLDPRT  MirrorMotor4.SLDPRT  MirrorMotor5.SLDPRT  MirrorMotor6.SLDPRT  MirrorMotor7.SLDPRT  MirrorUR10_movable.SLDASM
config/: costmap_common_params.yaml  robot_arm_controller.yaml  teb_local_planner_params.yaml
launch/: display.launch  gazebo.launch  navigation.launch  robot_arm_controller.launch
maps/: map.pgm  map.yaml  map0.pgm  map2.pgm
meshes/: base_link.STL  finger_link.STL  gripper_link.STL  right_arm_link.STL
models/pizza/: model.sdf
scripts/: move_arms.py  nav_goal.py
urdf/: left_arm.trans  left_arm.xacro  right_arm.trans  right_arm.xacro  robot.xacro  ydlidar.urdf
worlds/: cafe.world
