<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="2">
  <name>food_serving_robot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for food_serving_robot</p>
    <p>This package contains configuration data, 3D models and launch files
        for food_serving_robot robot</p>
  </description>
  <author>Maaruf</author>
  <author>Alex</author>
  <maintainer email="maaruf98@umd.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>